Init Vue instance, add data object and use interpolation to output event date, title and description from the data object

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="col-sm-12">
           <div class="card">
             <div class="card-header">
-              August 14th - 16th
+              {{event.date}}
             </div>
             <div class="card-block">
-              <h4 class="card-title">Summer Festival!</h4><hr>
-              <p class="card-text">It's back! This years summer festival will be in the beautiful countryside featuring our best line up ever!</p>
+              <h4 class="card-title"></h4>{{event.title}}<hr>
+              <p class="card-text">{{event.description}}</p>
               <p class="card-text">Add your name to the guest list for exclusive offers:</p>
 
               <form class="form-inline">
