Add for loop to render each name in its own div

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             </div>
             <div class="card-block">
               <div>
-                <div class="card-success rounded name-box">
-
+                <div class="card-success rounded name-box" v-for="name in guestName">
+                  {{name}}
                 </div>
               </div>
               <div>
