--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
         <div class="col-sm-12">
           <div class="card">
             <div class="card-header">
-              Attending ()
+              Attending ({{guestName.length}})
             </div>
             <div class="card-block">
-              <div>
+              <div v-if="guestName.length > 0">
                 <div class="card-success rounded name-box" v-for="name in guestName">
                   {{name}}
                 </div>
               </div>
-              <div>
+              <div v-else>
                 <h4>No names added yet...</h4>
-                {{guestName}}
+                
               </div>
             </div>
           </div>
