--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="card">
-            <div class="card-header">
+            <div class="card-header" v-bind:class="formSubmitClass">
               {{event.date}}
             </div>
             <div class="card-block">
@@ -33,7 +33,7 @@
 
               <form class="form-inline" v-on:submit.prevent="formSubmit">
                 <input type="text" id="nameInput" class="form-control mb-2 mr-sm-2 mb-sm-0" placeholder="Jane Doe" v-model="newNameText">
-                <input type="submit" class="btn btn-primary"></input>
+                <input type="submit" v-bind:class="formSubmitClass" class="btn btn-primary"></input>
               </form>
               {{newNameText}}
             </div>
