--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="app">
     <div class="container">
 
-      <div class="row">
+      <div class="row" :style="{marginTop: '25px'}">
         <div class="col-sm-12 text-center">
           <h1>Guest List</h1>
         </div>
