--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <div id="app">
     <div class="container">
 
-      <div class="row" :style="{marginTop: '25px'}">
+      <div class="row" :style="appStyles">
         <div class="col-sm-12 text-center">
           <h1>Guest List</h1>
         </div>
       </div>
 
-      <div class="row">
+      <div class="row" :style="appStyles">
         <div class="col-sm-12">
           <div class="card">
             <div class="card-header" v-bind:class="formSubmitClass">
@@ -41,7 +41,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row" :style="appStyles">
         <div class="col-sm-12">
           <div class="card">
             <div class="card-header">
