--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               {{event.date}}
             </div>
             <div class="card-block">
-              <h4 class="card-title"></h4>{{event.title}}<hr>
+              <h4 class="card-title" v-text="event.title"></h4><hr>
               <p class="card-text">{{event.description}}</p>
               <p class="card-text">Add your name to the guest list for exclusive offers:</p>
 
