--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="card-block">
               <h4 class="card-title" v-text="event.title"></h4><hr>
               <p class="card-text">{{event.description}}</p>
-              <p class="card-text">Add your name to the guest list for exclusive offers:</p>
+              <p class="card-text" v-html="event.sigUpText"></p>
 
               <!-- <form class="form-inline" v-on:submit.prevent="formSubmit"> -->
               <!-- @submit = v-on:submit -->
