--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               {{event.date}}
             </div>
             <div class="card-block">
-              <h4 class="card-title" v-text="event.title"></h4><hr>
+              <h4 class="card-title" v-once>{{event.title}}</h4><hr>
               <p class="card-text">{{event.description}}</p>
               <p class="card-text" v-html="event.sigUpText"></p>
 
