--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
   <div id="app">
     <div class="container">
 
+      <!-- <div class="row" :style="appStyles"> -->
       <div class="row" :style="appStyles">
         <div class="col-sm-12 text-center">
           <h1>Guest List</h1>
         </div>
       </div>
 
+      <!-- <div class="row" :style="appStyles"> -->
       <div class="row" :style="appStyles">
         <div class="col-sm-12">
           <div class="card">
@@ -43,6 +45,7 @@
         </div>
       </div>
 
+      <!-- <div class="row" :style="appStyles"> -->
       <div class="row" :style="appStyles">
         <div class="col-sm-12">
           <div class="card">
