--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
           <div class="card">
             <div class="card-header">
               Attending ({{guestName.length}})
+              <br>
+              <progress :value="enevtCapacityPercentage"></progress>
             </div>
             <div class="card-block">
               <div v-if="guestName.length > 0">
