Add condition to prevent userr from adding guest if event if full

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="col-sm-12">
           <div class="card">
             <div class="card-header">
-              Attending ({{guestName.length}})
+              Attending ({{guestName.length}} / {{eventCapacity}})
               <br>
               <progress :value="enevtCapacityPercentage"></progress>
             </div>
