--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="card-block">
               <div v-if="guestName.length > 0">
-                <div class="card-success rounded name-box" v-for="name in guestName">
+                <div class="card-success rounded name-box" v-for="name in sortNames">
                   {{name}}
                 </div>
               </div>
