--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="card-block">
               <div v-if="guestName.length > 0">
                 <div class="card-success rounded name-box" v-for="name in sortNames">
-                  {{name | toUpper}}
+                  {{name | formatName}}
                 </div>
               </div>
               <div v-else>
