Extract the index in the for loop and add key for each element

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             </div>
             <div class="card-block">
               <div v-if="guestName.length > 0">
-                <div class="card-success rounded name-box" v-for="name in sortNames">
-                  {{name | formatName}}
+                <div class="card-success rounded name-box" v-for="(name, index) in sortNames" :key="name">
+                  {{name | formatName}} ({{index + 1}})
                 </div>
               </div>
               <div v-else>
