--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <div class="container">
     <div id="navigation">
       <!-- <div class="row" v-bind:style="appStyles"> -->
-      <div class="row" :style="appStyles">
+      <!-- <div class="row" :style="appStyles"> -->
+      <div class="row">
         <div class="col-sm-12 text-center">
           <h1>{{appName}}</h1>
         </div>
@@ -27,7 +28,7 @@
 
 
       <!-- <div class="row" :style="appStyles"> -->
-      <div class="row" :style="appStyles">
+      <div class="row">
         <div class="col-sm-12">
           <div class="card">
             <!-- <div class="card-header" v-bind:class="formSubmitClass"> -->
@@ -54,7 +55,7 @@
       </div>
 
       <!-- <div class="row" :style="appStyles"> -->
-      <div class="row" :style="appStyles">
+      <div class="row">
         <div class="col-sm-12">
           <div class="card">
             <div class="card-header">
