--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <div class="col-sm-12 text-center">
           <h1>{{appName}}</h1>
         </div>
+        <div>
+          <ul>
+            <template v-for="navLink in navLinks">
+              <li>
+                <a :href="navLink.url">{{navLink.name}}</a>
+              </li>
+            </template>
+          </ul>
+        </div>
       </div>
     </div>
     <div id="app">
