--- a/index.html
+++ b/index.html
@@ -21,17 +21,19 @@
       <div class="row">
         <div class="col-sm-12 text-center">
           <h1>{{appName}}</h1>
+          <hr>
         </div>
         <div>
-          <ul>
-            <template v-for="navLink in navLinks">
-              <li>
-                <a :href="navLink.url">{{navLink.name}}</a>
+          <ul class="nav">
+            <div v-for="navLink in navLinks" :key="navLink.id">
+              <li class="nav-item">
+                <a class="nav-link" :href="navLink.url">{{navLink.name}}</a>
               </li>
-            </template>
+            </div>
           </ul>
         </div>
       </div>
+      <hr>
     </div>
     <div id="app">
 
