Add ref example

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <!-- <div class="row" :style="appStyles"> -->
       <div class="row">
         <div class="col-sm-12 text-center">
-          <h1>{{appName}}</h1>
+          <!-- <h1 @click="changeTitle" ref="name">Guest List</h1> -->
+          <h1>Guest List</h1>
           <hr>
         </div>
         <div>
